# pkgdemo

./: LICENSE.md  README.md
addconst/: setup.cfg  setup.cfg~
addconst/src/addconst/: addconst.py
addconst/tests/: test_addconst.py
