[metadata]
name = addconst
version = 0.1.0.dev0
description = Add a constant to given numbers
long_description = file: README.md

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    click >=8.0,<9

[options.packages.find]
where=src

[options.extras_require]
tests =
    pytest
dev =
    black
    flake8
    ipython
    isort
